# kaggle-pokemon

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
decklists/: darkness_aggro.csv  fighting_aggro.csv  grass_aggro.csv  lightning_aggro.csv  psychic_aggro.csv  qd_step1_best.csv  run4_best.csv  run7_best.csv  single_prize_psychic.csv  water_aggro.csv
decklists/candidates/: qd2_sur.csv  qd3_rand.csv  qd4_coevo.csv  qd4_prod.csv
decklists/heldout/: ho_colorless_kanga.csv  ho_colorless_terapagos.csv  ho_dark_absol.csv  ho_dark_yveltal.csv  ho_fighting_koraidon.csv  ho_fighting_zygarde.csv  ho_fire_gouging.csv  ho_fire_volcanion.csv  ho_grass_heracross.csv  ho_grass_ironleaves.csv  ho_lightning_pikachu.csv  ho_lightning_zekrom.csv  ho_metal_mawile.csv  ho_metal_zacian.csv  ho_psychic_latias.csv  ho_psychic_mewtwo.csv  ho_water_blackkyurem.csv  ho_water_kyurem.csv  md2_dark_psychic.csv  md2_fight_metal.csv  md_dark_okidogi.csv  md_fighting_regirock.csv  md_fire_ogerpon.csv  md_grass_durant.csv  md_lightning_thorns.csv  md_metal_genesect.csv  md_psychic_diancie.csv  md_stall_snorlax.csv  md_water_dondozo.csv  md_water_regice.csv
docs/: deck-search-redesign.md  running-on-a-server.md
docs/research/: game-ai-survey.md  osfp-cardgame-2303.05197.md  paper-faithful-rewrite.md
docs/rules/: pokemon-tcg-rules.md
notebooks/: 01_card_data_eda.ipynb  02_osfp_training.ipynb  02_play_diagnostics.ipynb  03_paper_net_eval.ipynb
results/: coevo_2x2.json  coevo_round6_analysis.json  coevo_strength.json  deck_strength.json  deckeval_demo_greedy.json  final_vs_bc.json  final_vs_heur.json  heldout.json  heldout_qd4prod.json  heldout_qd_step2.json  heldout_qd_step3.json  heldout_qd_step4.json  ladder_corr.csv  nashconv.json  nashconv_qd.json  nashconv_qd4.json  nashconv_qd4prod.json  opening_diag.json  paper_analysis.json  paper_eval.json  play_diag.json  qd_archive.json  qd_archive_lowcolour.json  qd_step1.json  qd_step2_sur100.json  qd_step3_heur100.json  qd_step3_heur20.json  qd_step3_rand100.json  qd_step3_rand20.json  qd_step4_coevo100.json  qd_step4_production.json  qd_step4_smoke_sur.json  strength.json
results/phase0/: gr_n500_s0.json  gr_n500_s0_rep.json  rr_n500_s0.json  rr_n500_s500.json
results/phase2/: heuristic_no_attach_target_vs_greedy_n500_s0.json  heuristic_no_attack_ko_vs_greedy_n500_s0.json  heuristic_no_bench_dev_vs_greedy_n500_s0.json  heuristic_no_promote_vs_greedy_n500_s0.json  heuristic_no_retreat_vs_greedy_n1000_s1000.json  heuristic_no_retreat_vs_greedy_n1000_s7000.json  heuristic_no_retreat_vs_greedy_n500_s0.json  heuristic_no_weakness_vs_greedy_n500_s0.json  heuristic_vs_greedy_n1000_s1000.json  heuristic_vs_greedy_n500_s0.json  heuristic_vs_greedy_n500_s500.json  heuristic_vs_random_n500_s0.json
results/phase4/: bc_vs_greedy.json  bc_vs_heuristic.json  bc_vs_random.json  bcgreedy_vs_greedy.json  bcgreedy_vs_heuristic.json  bcgreedy_vs_random.json
scripts/: analyze_paper_net.py  archive_rr.py  build_demo_decks.py  build_eda_notebook.py  build_eval_notebook.py  build_heldout_decks.py  build_osfp_notebook.py  build_play_diag_notebook.py  build_recurrent_submission.py  build_submission.py  coevo_2x2.py  coevo_strength.py  collect_bc.py  collect_cb.py  collect_deck_selfplay.py  collect_joint_selfplay.py  collect_paper_selfplay.py  collect_selfplay.py  deck_strength.py  deck_vs_meta.py  download_data.sh  eval_paper_vs.py  heldout_eval.py  nashconv_eval.py  opening_diag.py  play_diag.py  probe_deck_legality.py  probe_net.py  probe_obs.py  probe_phase2.py  qd_deck_search.py  run_deck_eval.py  run_eval.py  run_paper_eval.py  sim_smoke.py  slow_skill.py  strength_over_iters.py  train_bc.py  train_cb.py  train_deck_osfp.py  (+4 more)
src/: cards.py  deck.py  deckbuild.py  decklists.py
src/agents/: __init__.py  base.py  greedy_agent.py  heuristic_agent.py  net_agent.py  random_agent.py  recurrent_agent.py
src/harness/: __init__.py  result.py  stats.py
src/net/: __init__.py  bc_data.py  cb.py  deck_factored.py  deck_sample.py  embedding.py  encode.py  features.py  lit.py  lit_vtrace.py  model.py  nn.py  osfp.py  recurrent_model.py  recurrent_torch.py  torch_model.py  train.py  trajectory_data.py  vtrace.py
src/qd/: __init__.py  archive.py  coevo.py  deck_qd.py  surrogate.py
submission/: main.py
tests/: test_agents.py  test_bc.py  test_cards.py  test_deck.py  test_deck_factored.py  test_deckbuild.py  test_decklists.py  test_heuristic.py  test_net.py  test_net_torch.py  test_osfp.py  test_qd.py  test_qd_coevo.py  test_recurrent_parity.py  test_rl.py  test_selection.py  test_stats.py  test_surrogate.py  test_vtrace.py  test_vtrace_learner.py
