[project]
name = "kaggle-pokemon-tcg"
version = "0.1.0"
description = "Pokemon TCG AI Battle Challenge (Kaggle) - agent + analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "N812"]

[tool.ruff.lint.per-file-ignores]
# Utility/CLI scripts: prints, asserts, top-level constants are fine.
"scripts/*" = ["T201", "INP001", "S101", "PLR2004", "TRY003", "EM101", "EM102"]
# Card data legitimately contains the ×/● glyphs; flagging them as ambiguous is noise.
"src/cards.py" = ["RUF002"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]
