[project]
name = "kaggle-pokemon-tcg"
version = "0.1.0"
description = "Pokemon TCG AI Battle Challenge (Kaggle) - agent + analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
# EDA notebooks aren't held to library lint standards. The submission bundle is a
# standalone, deliberately crash-proof artifact (blind excepts, no `src` import)
# that mirrors the unit-tested src/agents/greedy_agent.py.
extend-exclude = ["notebooks", "submission"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "N812"]

[tool.ruff.lint.per-file-ignores]
# Utility/CLI scripts: prints, asserts, top-level constants are fine.
"scripts/*" = ["T201", "INP001", "S101", "PLR2004", "TRY003", "EM101", "EM102"]
# Card data legitimately contains the ×/● glyphs; flagging them as ambiguous is noise.
"src/cards.py" = ["RUF002"]
# Tests: asserts and inline literals are the point.
"tests/*" = ["S101", "PLR2004", "INP001", "RUF001", "RUF002"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.src]
# cg engine lives under the gitignored data/ download; don't type-check scripts that import it.
include = ["src", "tests"]
# torch's nn.Module dynamic attribute model (custom __setattr__/__getattr__) doesn't
# play well with structural type-checking, so the training-only modules that import
# torch/Lightning are excluded -- same rationale as the cg-importing scripts above.
# The submission/inference path (src/net/model.py etc.) stays numpy and is checked.
exclude = [
    "src/net/torch_model.py",
    "src/net/lit.py",
    "src/net/bc_data.py",
    "tests/test_net_torch.py",
    "tests/test_bc.py",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "lightning>=2.6.5",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "torch>=2.12.1",
    "ty>=0.0.1a28",
]
